2005-10-26  Zeeshan Ali  <zeenix@gmail.com>

	* ext/gsm/gstgsm.c:
	* ext/gsm/gstgsmdec.c: (gst_gsmdec_init), (gst_gsmdec_chain):
	* ext/gsm/gstgsmdec.h:
	* ext/gsm/gstgsmenc.c: (gst_gsmenc_class_init), (gst_gsmenc_init),
	(gst_gsmenc_chain):
	Fixing stuff as wingo pointed out.

2005-10-25  Zeeshan Ali  <zeenix@gmail.com>

	* ext/gsm/gstgsm.c: (plugin_init):
	* ext/gsm/gstgsmdec.c: (gst_gsmdec_class_init), (gst_gsmdec_init),
	(gst_gsmdec_chain):
	* ext/gsm/gstgsmdec.h:
	* ext/gsm/gstgsmenc.c: (gst_gsmenc_class_init), (gst_gsmenc_init),
	(gst_gsmenc_chain):
	* ext/gsm/gstgsmenc.h:
	Over-writing Wim's gsm plugins (currently not working) with that from the 
	farsight repo. Also made sure that they work with the RTP (de)payloader.

2005-10-25  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/gsm/gstgsmenc.c: (gst_gsmenc_init), 
	(gst_gsmenc_sink_event), (gst_gsmenc_chain):
	* ext/gsm/gstgsmenc.h:
	Fixed event handling

2005-10-24  Christian Schaller  <christian@fluendo.com>

	* configure.ac: port over thomas's plugin listing from base

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.9.4 ===

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* configure.ac:
	  Releasing 0.9.4, "Utahraptor"

2005-10-23  Julien MOUTTE  <julien@moutte.net>

	* gst/tta/gstttaparse.c: (gst_tta_parse_loop): STOPPED->FAILED.

2005-10-20  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/faad/gstfaad.c: (gst_faad_base_init), (gst_faad_class_init),
	(gst_faad_init), (gst_faad_srcgetcaps), (gst_faad_event),
	(gst_faad_chain), (gst_faad_change_state):
	* ext/faad/gstfaad.h:
	  Do some timestamp smoothing (matroskademux apparently sends
	  multiple buffers in a row with the same timestamp); fix
	  duration on outgoing buffers; fix change state function; use
	  GST_DEBUG_FUNCPTR for pad functions.

2005-10-19  Wim Taymans  <wim@fluendo.com>
